observability/grafana/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  name: grafana 
  namespace: monitoring
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /grafana(/|$)(.*)
