observability/grafana/traefik-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.frontend.rule.type: PathPrefixStrip
  name: grafana 
  namespace: monitoring
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
        path: /grafana
